--- a/Python全栈开发中级/第六模块/第一章/11 Ajaxdemo/templates/login.html
+++ b/Python全栈开发中级/第六模块/第一章/11 Ajaxdemo/templates/login.html
@@ -1,13 +1,160 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<a href="/get_ok/">点击</a><span class="error"></span>-->
+<!--<hr>-->
+<!--<p>姓名<input type="text" id="user"></p>-->
+<!--<p>密码<input type="password" id="pwd"> </p>-->
+<!--<p><button class="login_btn">login_btn</button><span class="login_error"></span> </p>-->
+
+<!--<script src="../static/jquery-3.3.1.js"></script>-->
+
+<!--// 登录验证-->
+<!--<script>-->
+    <!--$(".login_btn").click(function () {-->
+
+        <!--$.ajax({-->
+            <!--url:"/login/",-->
+            <!--type:"post",-->
+            <!--data:{-->
+                <!--"user":$("#user").val(),-->
+                <!--"pwd":$("#pwd").val(),-->
+            <!--},-->
+            <!--success:function (data) {-->
+                <!--console.log(data);  // json字符串-->
+                <!--console.log(typeof data);-->
+
+                <!--var data=JSON.parse(data);   // 反序列化 object{}-->
+                <!--console.log(data);      // object-->
+                <!--console.log(typeof data);-->
+
+                <!--if (data.user){-->
+                    <!--// location.href="www.baidu.com"-->
+                <!--}-->
+                <!--else {-->
+                    <!--$(".login_error").html(data.msg).css({"color":"red","margin-left":"10px"})-->
+                <!--}-->
+
+            <!--}-->
+        <!--})-->
+
+    <!--})-->
+
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width">
     <title>Title</title>
+    <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/login.css">
 </head>
 <body>
-<a href="/get_ok/">点击</a><span class="error"></span>
-<hr>
-<p>姓名<input></p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-1=10">
+            <form class="form-horizontal" id="form_data" action="/login/" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="username" class="col-sm-2 control-label">用户名</label>
+                    <div class="col-sm-5">
+                        <input type="text" class="form-control" id="username" placeholder="用户名" name="username">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-2 control-label">密码</label>
+                    <div class="col-sm-5">
+                        <input type="password" class="form-control" id="password" placeholder="密码" name="password">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-1">
+                            {# 文字部分#}
+                            <label for="vialdCode" class="col-md-2 control-label">验证码</label>
+                            <div class="col-sm-5">
+                                <input type="text" class="form-control vialCode_text" id="vialdCode" placeholder="验证码" name="vi
+">
+                            </div>
+                            {# 图片部分 #}
+                            <div class="col-md-5">
+                                <img class="vialdCode_img" src="/get_vaildCode_img/" alt="" width="200px" height="100px">
 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <p>
+                            <button type="button" class="btn btn-success login">登录</button>
+                            <span class="error has-error"></span>
+                        </p>
+                        <p>
+                            <button type="button" class="btn btn-primary register">注册</button>
+                        </p>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="../static/jquery-3.3.1.js"></script>
+<script src="../static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+
+<script>
+    $(function () {
+        // 给登录按钮添加事件
+        $(".login").click(function () {
+            function foo() {
+                $(".error").html("")
+
+            }
+            //用post
+            $.post({
+                url:'/login/',
+                headers: {"X-CSRFToken": $.cookie('csrftoken')},
+                data: $("#form_data").serialize(),
+                success:function (data) {
+                    var data = JSON.parse(data);
+                    console.log(typeof data);
+                    if (data['flag']){
+                        window.href= '/index/'
+                    }
+                    else {
+                        $(".error").html(data["error_img"]);
+                        setTimeout(foo, 3000)
+                    }
+
+                }
+            })
+
+
+        });
+
+        // 给注册按钮添加事件
+        $(".register").click(function () {
+            window.location.href = '/register/'
+
+        });
+
+        // 给验证码刷新
+        $(".vialdCode_img").click(function () {
+            $(this).attr("src", $(this).attr("src")+'?')
+
+        })
+
+    })
+</script>
 </body>
 </html>
