--- a/Python全栈开发中级/第六模块/第一章/11 Ajaxdemo/templates/index.html
+++ b/Python全栈开发中级/第六模块/第一章/11 Ajaxdemo/templates/index.html
@@ -1,67 +1,161 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+    <!--<meta charset="UTF-8">-->
+    <!--<title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h2>This is Index!</h2>-->
+<!--<button class="Ajax">Ajax</button>-->
+<!--<p class="content"></p>-->
+<!--<hr>-->
+<!--<form>-->
+    <!--<p>姓名<input type="text" id="user"></p>-->
+    <!--<p>密码<input type="password" id="pwd"> </p>-->
+    <!--<p><input type="button" value="submit" class="login_btn"><span class="login_error"></span> </p>-->
+<!--</form>-->
+
+<!--<hr>-->
+<!--<input type="text" id="num1">+<input type="text" id="num2">=<input type="text" id="ret"><button class="cal">计算</button>-->
+
+<!--<hr>-->
+<!--<button class="Ajax_get">Ajax_get</button>-->
+
+<!--<script src="../static/jquery-3.3.1.js"></script>-->
+
+<!--// 登录验证-->
+
+<!--<script>-->
+
+    <!--$(".login_btn").click(function () {-->
+        <!--function foo(){-->
+            <!--$(".login_error").html("")  // 3秒后清空-->
+        <!--}-->
+
+        <!--$.ajax({-->
+            <!--url:"/login/",-->
+            <!--type:"post",-->
+            <!--data:{-->
+                <!--"user":$("#user").val(),-->
+                <!--"pwd":$("#pwd").val(),-->
+            <!--},-->
+
+            <!--// ==========成功的时候要执行的代码=========-->
+            <!--success:function(data) {-->
+                <!--console.log(data);  // json字符串-->
+                <!--console.log(typeof data);-->
+
+                <!--var data=JSON.parse(data);   // 反序列化 object{}-->
+                <!--console.log(data);      // object-->
+                <!--console.log(typeof data);-->
+                <!--alert(data)-->
+
+                <!--if (data.user){-->
+                   <!--// location.href="www.baidu.com"-->
+                <!--}-->
+                <!--else {-->
+                    <!--$(".login_error").html(data.msg).css({"color":"red","margin-left":"10px"});-->
+                    <!--setTimeout(foo, 3000)-->
+                <!--}-->
+            <!--// ============失败的时候要执行的代码==========-->
+
+            <!--},-->
+            <!--error:function (jqXHR, textStatus, err) {-->
+
+                <!--// jqXHR； jQuery增强的xhr-->
+                <!--// textStatus: 请求完成状态-->
+                <!--// err: 底层通过throw抛出来的异常对象，值与错误类型有关-->
+                <!--console.log(arguments);-->
+
+            <!--},-->
+            <!---->
+            <!--//=====complete（无论成功还是失败，都要执行的代码）=======-->
+            <!--complete:function (jqXHR, textStatus) {-->
+                <!--console.log('statusCode: %d, statusText: %s', jqXHR.status, jqXHR.statusText);-->
+                <!--console.log('textStatus: %s', textStatus);-->
+                <!---->
+            <!--},-->
+            <!--//  ========statusCode=======-->
+            <!--statusCode:{-->
+                <!--'403': function (jqXHR, textStatus, err) {-->
+                    <!--console.log(arguments);-->
+                <!--},-->
+                <!--'400':function () {-->
+                    <!---->
+                <!--}-->
+            <!--}-->
+        <!--})-->
+
+    <!--})-->
+
+
+
+    <!--$(".Ajax").click(function () {-->
+
+        <!--// 发送Ajax请求-->
+        <!--$.ajax({-->
+            <!--url:"/test_ajax/",  // 请求URL-->
+            <!--type: "get",    //请求方式get-->
+            <!--data:{a:1, b:2},-->
+            <!--success:function (data) {   // 回调函数-->
+                <!--console.log(data);-->
+                <!--$(".content").html(data)-->
+
+            <!--}-->
+        <!--})-->
+
+    <!--});-->
+
+    <!--// ajax计算求值-->
+    <!--$(".cal").click(function () {-->
+
+        <!--$.ajax({-->
+            <!--url:"/cal/",-->
+            <!--type:"post",-->
+            <!--data:{-->
+                <!--"n1":$("#num1").val(),-->
+                <!--"n2":$("#num2").val(),-->
+            <!--},-->
+            <!--success:function (data) {-->
+                <!--console.log(data);-->
+
+                <!--$("#ret").val(data);-->
+
+            <!--}-->
+        <!--})-->
+
+    <!--})-->
+
+    <!--// get请求-->
+    <!--$(".Ajax_get").click(function () {-->
+        <!--$.ajax('/ajax_get/',{-->
+
+            <!--success: function (data) {-->
+                <!--console.log(data);-->
+                <!--//console.log(typeof(data));-->
+
+                <!--console.log(data.name);-->
+
+
+
+            <!--},-->
+             <!--dataType: "json",-->
+        <!--})-->
+
+    <!--})-->
+<!--</script>-->
+
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录页面</title>
-    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.min.css">
-    <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
-    <style>
-        .c1 {
-            margin-top: 100px;
-        }
-        .btn {
-            width: 100px;
-        }
-        .c2,h6 {
-
-            margin-left: 100px;
-        }
-        .reg {
-            text-decoration: none;
-            color: white;
-        }
-    </style>
+    <title>Title</title>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="c1 col-md-5 col-md-offset-3">
-            <form class="form-horizontal" action="/login/" method="post" novalidate>
-                {% csrf_token %}
-                <h3 style="text-align: center">登录</h3>
-                <div class="form-group">
-                    <label for="username" class="col-sm-2 control-label">用户名</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="username" placeholder="输入用户名" name="username">
-                    </div>
-                </div>
-                <h6 style="color: red">{{s1}}</h6>
-                <div class="form-group">
-                    <label for="password" class="col-sm-2 control-label">密 码</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="password" placeholder="输入密码" name="password">
-                    </div>
-                </div>
-                <h6 style="color: red">{{s}}</h6>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <input type="submit" class="btn btn-primary" value="登录">
-                        <a href="/reg/" class="reg"><button type="button" class="btn btn-success c2">注册</button> </a>
-
-                    </div>
-
-                 </div>
-
-            </form>
-
-
-
-
-        </div>
-    </div>
-
-</div>
-
-
+<h1>hello{{ request.user.username }}</h1>
+<button><a href="/log_out">注销</a> </button>
 </body>
 </html>
