--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/register.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/register.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>注册页面</title>
-    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.css">
-    <script src="/static/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.css">
+    <script src="../static/jquery-3.3.1.js"></script>
 
     <style>
         #avatar_img {
@@ -37,7 +37,7 @@
                 <div class="form-group">
                     <label for="avatar">
                         头像
-                        <img id="avatar_img" width="60" height="60" src="/static/blog/img/default.png" alt="">
+                        <img id="avatar_img" width="60" height="60" src="../static/blog/img/default.png" alt="">
                     </label>
                     <input type="file" id="avatar" name="avatar">
                 </div>
