--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/index.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.css">
-    <script src="/static/jquery-3.3.1.js"></script>
-    <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.css">
+    <script src="../static/jquery-3.3.1.js"></script>
+    <script src="../static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
     <style>
         #user_icon {
@@ -69,5 +69,72 @@
         </div>
     </div>
 </nav>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="panel panel-warning">
+                <div class="panel-heading">Panel heading without title</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+
+            <div class="panel panel-info">
+                <div class="panel-heading">Panel heading without title</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+
+            <div class="panel panel-danger">
+                <div class="panel-heading">Panel heading without title</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+
+        </div>
+        <div class="col-md-6">
+            <div class="article_list">
+                {% for article in article_list %}
+                <div class="article-item small">
+                    <h5><a href="/{{ article.user.username }}/articles/{{ article.pk }}">{{ article.title}}</a> </h5>
+                    <div class="article-desc">
+                        <span class="media-left">
+                            <a href="/{{ article.user.username }}/"><img width="56" height="56" src="media/{{ article.user.avatar }}" alt=""> </a>
+                        </span>
+                        <span class="media-right">
+                            {{ article.desc }}
+                        </span>
+                    </div>
+                    <div class="small pub_info">
+                        <span><a href="/{{ article.user.username }}/">{{ article.user.username }}</a> </span>&nbsp;&nbsp;&nbsp;
+                        <span>发布于 &nbsp;&nbsp;{{ article.create_time|date:"Y-m-d H:i" }}</span>&nbsp;&nbsp;
+                        <span class="glyphicon glyphicon-comment"></span>评论({{ article.comment_count }})&nbsp;&nbsp;
+                        <span class="glyphicon glyphicon-thumbs-up"></span>点赞({{ article.up_count }})&nbsp;&nbsp;
+                    </div>
+                </div>
+                    <hr>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="panel panel-primary">
+                <div class="panel-heading">Panel heading without title</div>
+                    <div class="panel-body">
+                        Panel content
+                    </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">Panel heading without title</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 </body>
 </html>
