--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/base.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/base.html
@@ -12,7 +12,24 @@
 <body>
 <div class="header">
     <div class="content">
-        <p class="title"></p>
+        <p class="title">
+            <span>{{ blog.title }}</span>
+            <a href="/cn_backend/" class="backend">管理</a>
+        </p>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-3 menu">
+            {% load my_tags %}
+            {% get_classification_style username %}
+        </div>
+        <div class="col-md-9">
+            {% block content %}
+
+            {% endblock %}
+        </div>
     </div>
 </div>
 </body>
