--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/index.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.css">
-    <script src="../static/jquery-3.3.1.js"></script>
+    <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.css">
+    <script src="/static/jquery-3.3.1.js"></script>
     <script src="../static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
     <style>
@@ -50,7 +50,7 @@
                                           class="glyphicon glyphicon-user"></span>{{ request.user.username }} </a> </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">Dropdown <span class="caret"></span> </a>
+                           aria-expanded="false">个人中心 <span class="caret"></span> </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">修改密码</a> </li>
                             <li><a href="#">修改头像</a> </li>
