--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/register.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/register.html
@@ -86,6 +86,7 @@
 
                 if(data.user){
                     // 注册成功
+                    alert("注册成功");
                     location.href="/login/"
                 }
                 else {
