--- a/作业/第十四作业/myblog/templates/login.html
+++ b/作业/第十四作业/myblog/templates/login.html
@@ -5,12 +5,8 @@
     <title>登录</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.css">
     <script src="/static/blog/js/jquery-3.3.1.js"></script>
-    <style>
-        .error {
-            color: red;
-            margin-left: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/blog/css/login_reg.css">
+
 </head>
 <body>
 <div class="container">
