--- a/作业/第十四作业/myblog/templates/register.html
+++ b/作业/第十四作业/myblog/templates/register.html
@@ -5,19 +5,8 @@
     <title>注册页面</title>
     <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.css">
     <script src="/static/blog/js/jquery-3.3.1.js"></script>
-    <style>
-        #avatar_img {
-            margin-left: 20px;
-            width: 60px;
-            height: 60px;
-        }
-        #avatar {
-            display: none;
-        }
-        .error {
-            color: red;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/blog/css/login_reg.css">
+
 </head>
 <body>
 <div class="container">
