--- a/作业/第十四作业/myblog/templates/backend/base.html
+++ b/作业/第十四作业/myblog/templates/backend/base.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.css">
     <script src="/static/blog/js/jquery-3.3.1.js"></script>
     <script src="/static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+    <script src="/static/blog/js/sweetalert.min.js"></script>
     <link rel="stylesheet" href="/static/blog/css/backend.css">
+    <link rel="stylesheet" href="/static/blog/css/sweetalert.css">
 </head>
 <body>
 
@@ -91,5 +93,57 @@
         </div>
     </div>
 </div>
+
+{% block script %}
+    <script type="text/javascript">
+        $(".btn_delete").click(function () {
+            var delete_id = $(this).parent().siblings('td').eq(1).text();
+            var row = $(this).parent().parent();
+            var pathname = window.location.pathname;
+            var url = null;
+            alert(pathname);
+
+
+            if(pathname.indexOf("/cn_backend/")>0){
+                url = pathname.replace('/cn_backend/', '/delete/')
+            }
+
+
+            // 删除插件的应用
+            swal({
+
+                title: "确定要删除吗？",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-danger",
+                confirmButtonText: "确定",
+                closeOnConfirm: false
+
+            },
+
+            function () {
+                $.ajax({
+                    url: url,
+                    type: 'post',
+                    data:{'delete_id': delete_id},
+                    success:function (ret) {
+                        var data = JSON.parse(ret);
+                        if(data.status == 0){
+                            row.remove();
+                            swal(data.msg, "删除成功", "success");
+                        }else{
+                            swal(data.msg, "删除失败", "error")
+                        }
+
+
+                    }
+                });
+
+            });
+
+        });
+    </script>
+{% endblock %}
+
 </body>
 </html>
