--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/base.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/theme/{{ blog.theme }}">
     <link rel="stylesheet" href="/static/blog/css/article_detail.css">
     <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.css">
-    <script src="../static/jquery-3.3.1.js"></script>
+    <script src="../../../../../../../Automated_Test_Platform/automated/static/js/jquery-3.3.1.js"></script>
 </head>
 <body>
 <div class="header">
