--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/index.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="/static/bootstrap-3.3.7/css/bootstrap.css">
-    <script src="/static/jquery-3.3.1.js"></script>
+    <script src="/static/js/jquery-3.3.1.js"></script>
     <script src="../static/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 
     <style>
