--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/login.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/login.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 </div>
-<script src="/static/jquery-3.3.1.js"></script>
+<script src="/static/js/jquery-3.3.1.js"></script>
 <script>
     // 刷新验证码
     $("#valid_code_img").click(function () {
