--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/register.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>注册页面</title>
     <link rel="stylesheet" href="../static/bootstrap-3.3.7/css/bootstrap.css">
-    <script src="../static/jquery-3.3.1.js"></script>
+    <script src="../../../../../../../Automated_Test_Platform/automated/static/js/jquery-3.3.1.js"></script>
 
     <style>
         .avatar_img {
