--- a/Python全栈开发中级/第六模块/第二章/myblog/templates/upload.html
+++ b/Python全栈开发中级/第六模块/第二章/myblog/templates/upload.html
@@ -22,7 +22,7 @@
     <input type="button" value="提交" id="btn">
 </form>
 
-<script src="../static/jquery-3.3.1.js">
+<script src="../../../../../../../Automated_Test_Platform/automated/static/js/jquery-3.3.1.js">
 
 </script>
 <script type="text/javascript">
